<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Papaya</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="last">Last</string>
    <string name="my_books">My books</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="try_again">Try again</string>
    <string name="check_connection">It seems to be you have no internet connection :(</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="connection_error">Connection error</string>
    <string name="logout">Logout</string>
    <string name="delete_user">Delete user</string>
    <string name="registration">Registration</string>
    <string name="open_in_gbooks">Open in\nGoogle Books</string>
    <string name="exchange">Exchange</string>
    <string name="book">Book</string>
    <string name="add_book">Add book</string>

    <string name="title">Title</string>
    <string name="authors">Author/authors</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>

    <string-array name="genres">
        <item>Business books</item>
        <item>Biographies and memoirs</item>
        <item>Detective stories</item>
        <item>Kid books</item>
        <item>Design and art</item>
        <item>Food and house</item>
        <item>Sport and health</item>
        <item>History</item>
        <item>Computers</item>
        <item>Love stories</item>
        <item>Medicine</item>
        <item>Science and technology</item>
        <item>Education</item>
        <item>Politics</item>
        <item>Psychology</item>
        <item>Fantasy</item>
        <item>Fiction</item>
        <item>Jurisprudence</item>
    </string-array>
</resources>
