<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="20dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username" android:layout_gravity="center_horizontal" android:hint="@string/username"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" android:layout_marginTop="20dp" android:hint="@string/password"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_button" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"
            android:padding="20dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:id="@+id/already_button" android:layout_gravity="center_horizontal" android:layout_marginTop="50dp"
            android:padding="20dp"/>
</LinearLayout>