<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    <!--android:layout_gravity="start"-->
    <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/drawer_padding"
                android:gravity="center_vertical"
                android:id="@+id/item_profile"
                android:text="@string/profile" android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:background="@drawable/color_selector_actionbar"/>
        <include layout="@layout/divider"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/drawer_padding"
                android:gravity="center_vertical"
                android:id="@+id/item_search"
                android:text="@string/search" android:textColor="@color/text_color"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:background="@drawable/selector_background"/>
        <include layout="@layout/divider"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/drawer_padding"
                android:gravity="center_vertical"
                android:id="@+id/item_last"
                android:text="@string/last" android:textColor="@color/text_color"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:background="@drawable/selector_background"/>
        <include layout="@layout/divider"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/drawer_padding"
                android:gravity="center_vertical"
                android:id="@+id/item_my_books"
                android:text="@string/my_books" android:textColor="@color/text_color"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:background="@drawable/selector_background"/>
        <include layout="@layout/divider"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/drawer_padding"
                android:gravity="center_vertical"
                android:id="@+id/item_settings"
                android:text="@string/settings" android:textColor="@color/text_color"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:background="@drawable/selector_background"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>